Another potential fix for hero photo. In dev tools there are no issues it looks how I want but on mobile its not right.

--- a/paxterra/client/src/styles/Hero.css
+++ b/paxterra/client/src/styles/Hero.css
@@ -119,7 +119,7 @@
   }
   .hero-background-visual {
     flex: auto;
-    min-height: 400px;
+    min-height: 500px;
     width: 100%;
   }
   .hero-background-visual img {
